samples/_failures_safe/1761140865_c77454_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01332771.c: In function ‘main’:
./samples/SAFE/__tmp_01332771.c:162:5: error: expected expression at end of input
  162 |     add_edge(&graph, 0,
      |     ^~~~~~~~
./samples/SAFE/__tmp_01332771.c:162:5: error: too few arguments to function ‘add_edge’
./samples/SAFE/__tmp_01332771.c:105:5: note: declared here
  105 | int add_edge(Graph* graph, int u, int v, int weight) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_01332771.c:162:5: error: expected declaration or statement at end of input
  162 |     add_edge(&graph, 0,
      |     ^~~~~~~~
